# dataStructuresAndAlgorithms

./: README.md  pyproject.toml
Chap01/: 01_estruturas_basicas.ipynb  02_collections.ipynb
